# microservice-qr-codes

./: README.md
api/: Cargo.toml
api/src/: main.rs
